refs #738. Fix problem with the visibility of nested StyledAlternatives components
--HG--
extra : convert_revision : svn%3A2a98c5bb-d66c-48ca-a96c-db028a6c31f4/ezweb_platform/src/trunk%403081

--- a/media/js/EzWebAPI_ext/EzWebGadgets.css
+++ b/media/js/EzWebAPI_ext/EzWebGadgets.css
@@ -465,7 +465,7 @@ div.styled_numeric_field div.numeric_bottom_button {
   right: 0;
   overflow: auto;
   position: absolute;
-  visibility: visible;
+  visibility: inherit;
   z-index: 2;
 }
 
